@@ -1,3 +1,6 @@
+2007-05-23  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/find.c: Send ouput to stderr.
+
 2007-05-16  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/dumper.c (read_datafd): Reset timeout after the write.
 
